--- a/Env_without_ray.ipynb
+++ b/Env_without_ray.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -52,194 +52,98 @@
      "output_type": "stream",
      "text": [
       "step 0\n",
-      "car_0: 0\n",
-      "car_1: 0\n",
-      "car_2: 0\n",
-      "car_3: 0\n",
-      "{0: 4}\n",
-      "travel time on path 0: 4.25\n",
-      "travel time on path 1: 4.0\n",
-      "travel time on path 2: 4.0\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
+      "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
+      "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
       "step 1\n",
-      "car_0: 0\n",
-      "car_1: 0\n",
-      "car_2: 0\n",
-      "car_3: 0\n",
-      "{0: 4}\n",
-      "travel time on path 0: 4.25\n",
-      "travel time on path 1: 4.0\n",
-      "travel time on path 2: 4.0\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
+      "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
+      "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
       "step 2\n",
-      "car_0: 0\n",
-      "car_1: 0\n",
-      "car_2: 0\n",
-      "car_3: 0\n",
-      "{0: 4}\n",
-      "travel time on path 0: 4.25\n",
-      "travel time on path 1: 4.0\n",
-      "travel time on path 2: 4.0\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
+      "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
+      "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
       "step 3\n",
-      "car_0: 0\n",
-      "car_1: 0\n",
-      "car_2: 0\n",
-      "car_3: 0\n",
-      "{0: 4}\n",
-      "travel time on path 0: 4.25\n",
-      "travel time on path 1: 4.0\n",
-      "travel time on path 2: 4.0\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
+      "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
+      "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
       "step 4\n",
-      "car_0: 0\n",
-      "car_1: 0\n",
-      "car_2: 0\n",
-      "car_3: 0\n",
-      "{0: 4}\n",
-      "travel time on path 0: 4.25\n",
-      "travel time on path 1: 4.0\n",
-      "travel time on path 2: 4.0\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
+      "{'path_0': 3, 'path_1': 1, 'path_2': 0}\n",
+      "{'travel_time_path_0': 4.0, 'travel_time_path_1': 4.0, 'travel_time_path_2': 3.75}\n",
       "step 5\n",
-      "car_0: 0\n",
-      "car_1: 0\n",
-      "car_2: 0\n",
-      "car_3: 1\n",
-      "{0: 3, 1: 1}\n",
-      "travel time on path 0: 4.0\n",
-      "travel time on path 1: 4.0\n",
-      "travel time on path 2: 3.75\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 6\n",
-      "car_0: 0\n",
-      "car_1: 0\n",
-      "car_2: 0\n",
-      "car_3: 1\n",
-      "{0: 3, 1: 1}\n",
-      "travel time on path 0: 4.0\n",
-      "travel time on path 1: 4.0\n",
-      "travel time on path 2: 3.75\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 7\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 2\n",
-      "car_3: 1\n",
-      "{2: 3, 1: 1}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.25\n",
-      "travel time on path 2: 3.75\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 8\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 2\n",
-      "car_3: 1\n",
-      "{2: 3, 1: 1}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.25\n",
-      "travel time on path 2: 3.75\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 9\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 10\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 11\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 12\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 13\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 14\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 15\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 16\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 17\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 18\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n",
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 19\n",
-      "car_0: 2\n",
-      "car_1: 2\n",
-      "car_2: 1\n",
-      "car_3: 1\n",
-      "{2: 2, 1: 2}\n",
-      "travel time on path 0: 3.25\n",
-      "travel time on path 1: 3.5\n",
-      "travel time on path 2: 3.5\n"
+      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n"
      ]
     }
    ],
    "source": [
     "network_name = 'Braess'\n",
     "nb_veh = 4\n",
-    "soc_fac = 1 # to be changed\n",
+    "soc_fac = 0 # to be changed\n",
     "network = Networks.network(network_name, nb_veh)\n",
     "nb_paths = network.nb_paths\n",
+    "\n",
+    "path_choice_filename = 'path_choice.csv'\n",
+    "flow_filename = 'flow_data.csv'\n",
+    "wr = CSVGenerator(path_choice_filename, flow_filename)\n",
     "\n",
     "def reward_calculator(soc_fac):\n",
     "    rew_array = np.zeros(nb_paths)\n",
@@ -258,33 +162,121 @@
     "for i in range(nb_iter):\n",
     "    print(\"step \" + str(i))\n",
     "    paths_flow_dict = {}\n",
+    "    car_path_dict = {}\n",
     "    for name_car, cars_veh in cars_dict.items():\n",
     "        rl_action = cars_veh.get_path_choice()\n",
-    "        print(name_car + \": \" + str(rl_action))\n",
+    "        car_path_dict[name_car] = rl_action\n",
+    "        # print(name_car + \": \" + str(rl_action))\n",
     "        if rl_action in paths_flow_dict:\n",
     "            paths_flow_dict[int(rl_action)] += 1\n",
     "        else:\n",
     "            paths_flow_dict[int(rl_action)] = 1\n",
-    "\n",
-    "    print(paths_flow_dict)\n",
     "    # update the path travel times of the network given the path flows\n",
     "    network.update_flow_from_dict(paths_flow_dict)\n",
     "\n",
     "    # Calculate states, reward, and done for each agent\n",
     "    travel_time = {}\n",
-    "    marginal_cost = {}\n",
-    "\n",
+    "    marginal_cost = {} \n",
+    "    path_flow_dict_full = {}\n",
+    "    travel_time_to_print = {}\n",
+    "    \n",
     "    for path in range(nb_paths):\n",
+    "        if path in paths_flow_dict.keys():\n",
+    "            path_flow_dict_full[\"path_\" + str(path)] = paths_flow_dict[path]\n",
+    "        else:\n",
+    "            path_flow_dict_full[\"path_\" + str(path)] = 0\n",
     "        travel_time[path] = network.travel_time(path)\n",
-    "        print(\"travel time on path \" + str(path) + \": \" + str(travel_time[path]))\n",
+    "        travel_time_to_print[\"travel_time_path_\" + str(path)] = travel_time[path]\n",
     "        # network marginal cost ( path ) return the marginal cost of the path\n",
     "        marginal_cost[path] = network.marginal_cost(path)\n",
-    "\n",
+    "    print(car_path_dict)\n",
+    "    print(path_flow_dict_full)\n",
+    "    print(travel_time_to_print)\n",
     "    rew_array = reward_calculator(soc_fac)\n",
     "    best_path = np.argmax(rew_array)\n",
     "    for name_car, cars_veh in cars_dict.items():\n",
     "        cars_veh.path_choice(best_path, network, soc_fac)\n",
-    "    # TO DO update the action_dict based on the "
+    "    # TO DO update the action_dict based on the \n",
+    "    wr.generateCSV(car_path_dict, travel_time_to_print)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import os.path\n",
+    "\n",
+    "class CSVGenerator:\n",
+    "\n",
+    "\t\"\"\"\n",
+    "\t\n",
+    "\tinitialise with path_choice_file name and flow_filename\n",
+    "\n",
+    "\tfor example: \n",
+    "\t\n",
+    "\tpath_choice_filename = 'path_choice.csv'\n",
+    "\tflow_filename = 'flow_data.csv'\n",
+    "\tobject = wr = CSVGenerator(path_choice_filename, flow_filename)\n",
+    "\n",
+    "\t\"\"\"\n",
+    "\n",
+    "\tdef __init__(self, path_choice_filename, flow_filename):\n",
+    "\t\tself.pathChoiceCsv = open(path_choice_filename, 'a')\n",
+    "\t\tself.pathChoiceHeader = True\n",
+    "\t\t\n",
+    "\t\tself.flowDataCSV = open(flow_filename, 'a')\n",
+    "\t\tself.flowDataHeader = True\n",
+    "\n",
+    "\tdef writePathChoice(self, path_choice):\n",
+    "\t\t\"\"\"\n",
+    "\t\tWrites path choices in a file\n",
+    "\t\tpath_choice must be a dictionary\n",
+    "\n",
+    "\t\tFor example:\n",
+    "\t\t{\"A\": 0, \"B\": 2, \"C\": 2, \"D\": 1}\n",
+    "\t\t\"\"\"\n",
+    "\t\tfieldnames = []\n",
+    "\t\tfor key in path_choice.keys():\n",
+    "\t\t\tfieldnames.append(key)\n",
+    "\n",
+    "\t\twriter = csv.DictWriter(self.pathChoiceCsv, fieldnames=fieldnames, lineterminator = '\\n')\n",
+    "\n",
+    "\t\t# print(\"pathchoice header = \", self.pathChoiceHeader)\n",
+    "\t\tif self.pathChoiceHeader:\n",
+    "\t\t\t# print(\"Writing path choice header\")\n",
+    "\t\t\twriter.writeheader()\n",
+    "\t\t\tself.pathChoiceHeader = False\n",
+    "\t\t\n",
+    "\t\twriter.writerow(path_choice)\n",
+    "\n",
+    "\tdef writeFlowData(self, flow_data):\n",
+    "\n",
+    "\t\t\"\"\"\n",
+    "\t\tWrites flow data in a file\n",
+    "\t\tflow_data must be a dictionary\n",
+    "\n",
+    "\t\tFor example:\n",
+    "\t\t{\"path_a\": 4.00, \"path_b\": 4.00, \"path_c\": 4.75}\n",
+    "\t\t\"\"\"\n",
+    "\n",
+    "\t\tfieldnames = []\n",
+    "\t\tfor key in flow_data.keys():\n",
+    "\t\t\tfieldnames.append(key)\n",
+    "\n",
+    "\t\twriter = csv.DictWriter(self.flowDataCSV, delimiter=',', fieldnames=fieldnames, lineterminator = '\\n')\n",
+    "\t\t\n",
+    "\t\tif self.flowDataHeader:\n",
+    "\t\t\twriter.writeheader()\n",
+    "\t\t\tself.flowDataHeader = False\n",
+    "\n",
+    "\t\twriter.writerow(flow_data)\n",
+    "\n",
+    "\tdef generateCSV(self, path_choice, flow_data):\n",
+    "\t\tself.writePathChoice(path_choice)\n",
+    "\t\tself.writeFlowData(flow_data)\n"
    ]
   },
   {
