--- a/Env_without_ray.ipynb
+++ b/Env_without_ray.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,79 +56,79 @@
       "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
       "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
       "step 1\n",
-      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
-      "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
-      "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
-      "step 2\n",
-      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
-      "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
-      "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
-      "step 3\n",
-      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
-      "{'path_0': 4, 'path_1': 0, 'path_2': 0}\n",
-      "{'travel_time_path_0': 4.25, 'travel_time_path_1': 4.0, 'travel_time_path_2': 4.0}\n",
-      "step 4\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 0}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 0, 'car_3': 1}\n",
       "{'path_0': 3, 'path_1': 1, 'path_2': 0}\n",
       "{'travel_time_path_0': 4.0, 'travel_time_path_1': 4.0, 'travel_time_path_2': 3.75}\n",
+      "step 2\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
+      "step 3\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
+      "step 4\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
+      "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
+      "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 5\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 6\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 7\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 8\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 9\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 10\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 11\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 12\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 13\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 14\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 15\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 16\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 17\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 18\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n",
       "step 19\n",
-      "{'car_0': 1, 'car_1': 0, 'car_2': 0, 'car_3': 2}\n",
+      "{'car_0': 0, 'car_1': 0, 'car_2': 2, 'car_3': 1}\n",
       "{'path_0': 2, 'path_1': 1, 'path_2': 1}\n",
       "{'travel_time_path_0': 3.75, 'travel_time_path_1': 3.75, 'travel_time_path_2': 3.75}\n"
      ]
@@ -143,7 +143,7 @@
     "\n",
     "path_choice_filename = 'path_choice.csv'\n",
     "flow_filename = 'flow_data.csv'\n",
-    "wr = CSVGenerator(path_choice_filename, flow_filename)\n",
+    "# wr = CSVGenerator(path_choice_filename, flow_filename)\n",
     "\n",
     "def reward_calculator(soc_fac):\n",
     "    rew_array = np.zeros(nb_paths)\n",
@@ -197,7 +197,7 @@
     "    for name_car, cars_veh in cars_dict.items():\n",
     "        cars_veh.path_choice(best_path, network, soc_fac)\n",
     "    # TO DO update the action_dict based on the \n",
-    "    wr.generateCSV(car_path_dict, travel_time_to_print)\n"
+    "    # wr.generateCSV(car_path_dict, travel_time_to_print)\n"
    ]
   },
   {
